# ExistOS-For-HP39GII

./: .gitattributes  .gitignore  CMakeLists.txt  README_en.md  _typos.toml  builder.sh  gen_glyphs3.ps1  regen_fonts_v2.ps1
.github/workflows/: build.yml
Archive/Emu48Disable/: debugger.c  display.c  emu48.c  timer.c
Archive/GB/: mbc.c
Archive/GMP-gmp-6.1.2/: ARCHIVED.md
Archive/MicroPython-upstream/: ARCHIVED.md  libmpy.libc
Archive/SystemDisable/: SystemUI.c
Archive/emu48/: ARCHIVED.md  MacWinAPIPatch.h  emu48_file.c  emu48_kb_39g.h  emu48_keyboard.h  emu48_porting.c  emu48_timer.c  emu48ico.c  pch.h  resource.h
Archive/emu48/core/: apple.c  apple.h  debugger.h  engine.c  fetch.c  i28f160.c  i28f160.h  io.h  kml.h  mops.c  opcodes.c  opcodes.h  ops.h  rpl.c  settings.c
Bootloader/: CMakeLists.txt
Bootloader/Component3rd/: CMakeLists.txt
Bootloader/Config/: FreeRTOSConfig.h  SystemConfig.h  tusb_config.h
Bootloader/Hal/: FTL_up.c  FTL_up.cpp  FTL_up.h  FTL_up.hpp  board_up.c  board_up.cpp  board_up.h  clkctrl_up.cpp  clkctrl_up.h  display_up.h  interrupt_up.c  interrupt_up.cpp  interrupt_up.h  keyboard_up.h  mtd_up.c  mtd_up.cpp  mtd_up.h  mtd_up.hpp  rtc_up.c  rtc_up.h  timer_up.h  uart_up.c  uart_up.cpp  uart_up.h  usb_descriptors.c
Bootloader/Hal/Hardware/: stmp_irqController.c  stmp_irqController.cpp
Bootloader/Hal/Hardware/registers/: gen_regmodel.py  hw_dma.h  hw_irq.h  regs.h  regs_i.h  regsapbh.h  regsapbx.h  regsaudioin.h  regsaudioout.h  regsaxi_ahb0.h  regsaxis.h  regsbch.h  regsclkctrl.h  regsdcp.h  regsdigctl.h  regsdram.h  regsdri.h  regsecc8.h  regsemi.h  regsgpiomon.h  regsgpmi.h  regsi2c.h  regsicoll.h  regsir.h  regslcdif.h  regslradc.h  regsocotp.h  regspinctrl.h  regspower.h  regspwm.h  regspxp.h  regsrtc.h  (+16 more)
Bootloader/Include/: stmp37xxNandConf.h  stmp_NandControlBlock.h
Bootloader/Llapi/: llapi.c  llapi.cpp  llapi.h
Bootloader/Scheduler/: CMakeLists.txt
Bootloader/Src/: debug.c  debug.h  msc_disk.c  msc_disk.cpp  start.c  start.cpp  stmp37xxNandConf.c  stmp37xxNandConf.cpp  stub.c  utilities.c  utilities.cpp  vectors.c
Bootloader/Vm/: CMakeLists.txt  lzoconf.h  lzodefs.h  mapList.c  mapList.h  minilzo.c  minilzo.h  mmu.c  mmu.cpp  mmu.h  quicklz.c  quicklz.h  vmMgr.c  vmMgr.cpp  vmMgr.h
Bootloader/Vm/tlsf/: target.h  tlsf.c  tlsf.h
Bootloader/boot/core/: boot_manager.c  boot_manager.h
Bootloader/boot/services/: display_service.c  display_service.cpp  ftl_service.cpp  key_service.cpp  llapi_service.c  mtd_service.c  mtd_service.cpp  services.h  usb_service.c  vm_service.c
Bootloader/drivers/: stmp_audioout.c  stmp_audioout.cpp  stmp_audioout.hpp  stmp_board.c  stmp_board.cpp  stmp_board.hpp  stmp_clkctrl.c  stmp_clkctrl.cpp  stmp_clkctrl.hpp  stmp_gpmi.c  stmp_gpmi.cpp  stmp_gpmi.hpp  stmp_lradc.c  stmp_lradc.cpp  stmp_lradc.hpp  stmp_power.c  stmp_power.cpp  stmp_power.hpp  stmp_rtc.cpp  stmp_rtc.hpp  stmp_uartdbg.cpp  stmp_uartdbg.h  stmp_uartdbg.hpp  stmp_usbdcd.c  stmp_usbdcd.cpp
Bootloader/drivers/display/: display_up.c  display_up.cpp  display_up.hpp  stmp_lcdif.c  stmp_lcdif.cpp  stmp_lcdif.hpp
Bootloader/drivers/input/: keyboard_up.c  keyboard_up.cpp  stmp_gpio.c  stmp_gpio.cpp  stmp_gpio.hpp
Bootloader/drivers/timer/: stmp_timer.c  stmp_timer.cpp  stmp_timer.hpp  timer_up.c  timer_up.cpp
Include/: llapi_code.h
Libs/src/khicas/: hist.h
OSLoader/: debug.h  start.c  vectors.c
OSLoader/HAL/: FTL_up.c  mtd_up.c
OSLoader/Include/: stmp_NandControlBlock.h
OSLoader/LowLevelAPI/: llapi.c
OSLoader/drivers/: stmp_clkctrl.c  stmp_usbdcd.c
Script/: ldr_ld.script  sys_ld.script.in
Scripts/: gen_ascii.py  gen_cjk_font.py  gen_glyphs.py  gen_hzk.py  transcode.py
System/: CMakeLists.txt
System/Apps/system/: clockman.c
System/Apps/user/khicas/: CMakeLists.txt  kcasporing_gl.c  kcasporing_gl.cpp  kcasporing_gl.h  khicas_cjk.cpp  khicas_cjk.h  khicas_ico.c  khicas_repl.cpp  khicas_stub.cpp  khicas_zh.h
System/Core/: SysIRQ.c  SystemConfig.c  SystemConfig.h  VROMLoader.c  VROMLoader.cpp  VROMLoader.h  getentropy.c  getentropy.cpp  init.c  main.c  main.cpp
System/Crash/: CrashLog.c  CrashLog.cpp  CrashLog.h
System/Drivers/: SystemFs.c  SystemFs.cpp  keyboard.h  keyboard_gii39.h
System/Fs/: SystemFs.h  wrapper.c  wrapper.cpp
System/KLib/tjpgdec/: tjpgd.c  tjpgd.h
System/UI/Core/: GuiLite.h  UICore.cpp  UICore.h  cjk_font.h
System/UI/Lang/: UI_Chinese.h  UI_Config.h  UI_English.h  UI_Language.h
System/UI/Screens/: SystemUI.c  SystemUI.cpp  SystemUI.h
System/Utils/: atexit.cpp  basic_api.c  basic_api.cpp  basic_api.h  debug.h  khicas_launch.cpp  newlib_stub.c  newlib_stub.cpp  pure_virtual.cpp  sym_def.c  sys_llapi.c  sys_llapi.h  sys_llapi.hpp  test.cpp
System/applications/user/khicas/: kcasporing_gl.c  khicas_stub.cpp
System/core/: SysIRQ.c  VROMLoader.c  main.c
System/disable/: exp_loader.c
System/emu48/: MacTypePatch.h  emu48_display.c  emu48_file.c  emu48_keyboard.c  emu48_serial.c  emu48_timer.c
System/emu48/core/: apple.c  apple.h  emu48.h  engine.c  external.c  i28f160.c  keyboard.c  lowbat.c  mops.c  opcodes.c  stack.c  types.h
System/gb/: rom.c  sdl.c
System/graphics/: GuiLite.h  UICore.cpp  UICore.h  UI_Config.h  vgafont.c
System/kernel/scheduler/freertos/core/: tasks.c
System/utils/: sys_llapi.c  sys_llapi.h
Tests/: memtest.c
Tests/host/: test_batch1_sys_signer.c  test_batch1_uicore.cpp  test_batch2_systemfs.c  test_batch2_vromloader.c
Tests/host/stubs_batch2/: FreeRTOS.h  SysConf.h  SystemUI.h  debug.h  task.h
dev_tools/: dump_hzk16.sh  gen_glyphs3.ps1  pyproject.toml
fonts/: font_ascii.h  fonts_hzk16s  fonts_hzk16s.ld  logo.h  vgafont.c
tests/host/: test_batch1_uicore.cpp  test_batch2_vromloader.c
tests/host/stubs_batch2/: FreeRTOS.h  SystemUI.h
tools/sbtools/: crypto.h  dbparser.c  dbparser.h  elf.c  elf.h  elftosb.c  elftosb1.c  misc.c  rsrc.h  sb.c  sb.h  sb1.c  sb1.h  sbloader.c  sbtoelf.c
tools/sys_signer/: CMakeLists.txt  builder.sh  main.c
tools/sys_signer/libelf/: elf.c  elf.h  elf32.c  elf32.h  elf64.c  elf64.h  elf_user.h
(+4 files in other folders)
