
include_directories(${CMAKE_SOURCE_DIR}/External/TinyUSB)
AUX_SOURCE_DIRECTORY(${CMAKE_SOURCE_DIR}/External/TinyUSB DIR_TUSB_SRCS)
AUX_SOURCE_DIRECTORY(${CMAKE_SOURCE_DIR}/External/TinyUSB/common DIR_TUSB_SRCS)
AUX_SOURCE_DIRECTORY(${CMAKE_SOURCE_DIR}/External/TinyUSB/device DIR_TUSB_SRCS)
AUX_SOURCE_DIRECTORY(${CMAKE_SOURCE_DIR}/External/TinyUSB/class/cdc DIR_TUSB_SRCS)
AUX_SOURCE_DIRECTORY(${CMAKE_SOURCE_DIR}/External/TinyUSB/class/msc DIR_TUSB_SRCS)


include_directories(${CMAKE_SOURCE_DIR}/External/Dhara)
AUX_SOURCE_DIRECTORY(${CMAKE_SOURCE_DIR}/External/Dhara DIR_DHARA_SRCS)




ADD_LIBRARY(tusb ${DIR_TUSB_SRCS}) 
ADD_LIBRARY(dhara ${DIR_DHARA_SRCS}) 



